✨ Updated to Minecraft 1.21.4